--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,6 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+contacts.txt
+
 # End of https://www.toptal.com/developers/gitignore/api/maven,intellij,macos
